--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
 
     function onSuccess (contacts) {
       alert(contacts.length);
+      alert(JSON.stringify(contacts));
     }
 
     </script>
