--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/icomoon.css">
     <link rel="stylesheet" type="text/css" href="css/flexslider.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script type="text/javascript" src="cordova.js"></script>
     <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/metro.min.js"></script>
     <script type="text/javascript">
