--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
 			console.log(menuid);
 		})
 	})
+
+  document.addEventListener('deviceready', onDeviceReady, false);
+    function onDeviceReady (argument) {
+      var options      = new ContactFindOptions();
+      options.filter   = "";
+      options.multiple = true;
+      filter["name"];
+      // var fields       = [navigator.contacts.fieldType.displayName, navigator.contacts.fieldType.name];
+      navigator.contacts.find(fields, onSuccess, onError, options);
+    }
+
+    function onSuccess (contacts) {
+      alert(contacts.length);
+      alert(JSON.stringify(contacts));
+    }
+    
 </script>
 </head>
 
