--- a/index.html
+++ b/index.html
@@ -37,47 +37,14 @@
 
 <body>
 <header class="head">
-  <div class="container">
-    <div class="grid condensed">
-      <div class="row cells12">
-        <div class="cell colspan2">
-        	<a href="index.html" class="logo"><img src="images/logo.png" alt="logo"></a>
-            <a href="#menu" id="menuTrigger" data-role="trigger" class="menu-trigger orange-text"><span class="icon-menu icon-2x"></span></a>
-        </div>
-        <div class="cell colspan10">
-        	<div class="menu-wrapper " id="menu">
-              <ul class="horizontal-menu compact">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="#" class="dropdown-toggle">Company</a>
-                  <ul class="d-menu" data-role="dropdown">
-                    <li><a href="company.html">Who We Are</a></li>
-                    <li><a href="whatwedo.html">What We Do</a></li>
-                  </ul>
-                </li>
-                <li><a href="service.html" >Service</a></li>
-                <li><a href="support.html">Support</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <!-- <li class="place-right no-hovered">
-                  <div class="input-control text">
-                    <input type="text" placeholder="Search">
-                    <button class="button"><span class="icon mif-search"></span></button>
-                  </div>
-                </li> -->
-              </ul>
-          </div>
-          <div class="social-list ">
-          	<div class="social-list">
-                <ul class="list inline cycle orange ">
-                    <li><a href="#" ><span class="icon-facebook"></span></a></li>
-                    <li><a href="#" ><span class="icon-twitter"></span></a></li>
-                    <li><a href="#" ><span class="icon-linkedin2"></span></a></li>
-                    <li><a href="#" ><span class="icon-google-plus"	></span></a></li>
-                 </ul>
-             </div>
-         </div>
-        </div>
-      </div>
-    </div>
+  <div class="app-bar orange fixed-top" data-role="appbar">
+      <a class="app-bar-element">WOW</a>
+      <span class="app-bar-divider"></span>
+      <ul class="app-bar-menu green place-right">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="support.html">Support</a></li>
+          <li><a href="contact.html">Contact</a></li>
+      </ul>
   </div>
 </header>
 <section class="banner">
