--- a/contact.html
+++ b/contact.html
@@ -45,10 +45,11 @@
             for (var j = 0; j < contacts[i].emails.length; j++) {
                 eml = contacts[i].emails[j].pref;
             };*/
-            var item = '<div class="list"><img src="' + contacts[i].photos + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span>'+contacts[i].phoneNumbers[0].value+'</div>';
+            var item = '<div class="list"><img src="' + contacts[i].photos + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span>'+contacts[i].phoneNumbers[0].value+'<br>'+JSON.stringify(contacts[i])+'</div>';
             citems.push(item);
             // citems.push(JSON.stringify(contacts[i]));
         };
+        $("#loader").hide();
         $("#contactList").html(citems.join(''));
     };
 
@@ -81,8 +82,8 @@
             </ul>
         </div>
     </header>
-    <section class="padding-vert-30">
-        <div class="bg-dark">
+    <section class="padding-vert-30 relative" style="min-height:90vh;">
+        <div id="loader" class="bg-dark">
             <div data-role="preloader" data-type="square"></div>
         </div>
         <div class="container">
