--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,10 @@
             for (var j = 0; j < contacts[i].emails.length; j++) {
                 eml = contacts[i].emails[j].pref;
             };*/
-            var item = '<div class="list"><img src="' + contacts[i].photos + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span>'+contacts[i].phoneNumbers[0].value+'<br>'+JSON.stringify(contacts[i])+'</div>';
+            var phno = JSON.stringify(contacts[i].phoneNumbers);
+            var emls = JSON.stringify(contacts[i].emails);
+            // var phot = JSON.stringify(contacts[i].photos);
+            var item = '<div class="list"><img src="' + contacts[i].photos[0].value + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span>'+contacts[i].phoneNumbers[0].value+'<br>'+phno+'<br>'+emls+'</div>';
             citems.push(item);
             // citems.push(JSON.stringify(contacts[i]));
         };
@@ -72,7 +75,7 @@
 
 <body>
     <header class="head">
-        <div class="app-bar orange fixed-top" data-role="appbar">
+        <div class="app-bar orange" data-role="appbar">
             <a class="app-bar-element" href="...">WOW</a>
             <span class="app-bar-divider"></span>
             <ul class="app-bar-menu green place-right">
