--- a/contact.html
+++ b/contact.html
@@ -86,9 +86,9 @@
         </div>
     </header>
     <section class="padding-vert-30 relative" style="min-height:90vh;">
-        <div id="loader" class="bg-dark">
+        <!-- <div id="loader" class="bg-dark">
             <div data-role="preloader" data-type="square"></div>
-        </div>
+        </div> -->
         <div class="container">
             <div id="contactList" class="listview" data-role="listview">
                 <div class="list">
