--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
 	})
 
   document.addEventListener('deviceready', onDeviceReady, false);
-    function onDeviceReady (argument) {
-      $.Notify({
-        caption: 'Ready',
-        content: 'Device ready',
-        type: 'info'
-    });
-    }
+  function onDeviceReady (argument) {
+    /*$.Notify({
+      caption: 'Ready',
+      content: 'Device ready',
+      type: 'info'
+    });*/
+  }
     
 </script>
 </head>
 
 <body>
 <header class="head">
-  <div class="app-bar orange fixed-top" data-role="appbar">
+  <div class="app-bar orange " data-role="appbar">
       <a class="app-bar-element">WOW</a>
       <span class="app-bar-divider"></span>
       <ul class="app-bar-menu green place-right">
@@ -158,8 +158,8 @@
     </div>
   </div>
 </section>
-<footer class="footer">
-	<div class="container">
+<!-- <footer class="footer">
+  <div class="container">
     <div class="grid">
       <div class="row cells2">
         <div class="cell">
@@ -170,14 +170,14 @@
             <li><a href="#" ><span class="icon-facebook"></span></a></li>
             <li><a href="#" ><span class="icon-twitter"></span></a></li>
             <li><a href="#" ><span class="icon-linkedin2"></span></a></li>
-            <li><a href="#" ><span class="icon-google-plus"	></span></a></li>
+            <li><a href="#" ><span class="icon-google-plus"  ></span></a></li>
           </ul>
         </div>
       </div>
     </div>
-		
-	</div>
-</footer>
+    
+  </div>
+</footer> -->
 <script src="js/jquery.flexslider-min.js"></script> 
 <script>
     $(function(){
