--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
             var phno = JSON.stringify(contacts[i].phoneNumbers);
             var emls = JSON.stringify(contacts[i].emails);
             // var phot = JSON.stringify(contacts[i].photos);
-            var item = '<div class="list"><img src="' + contacts[i].photos[0].value + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span>'+contacts[i].phoneNumbers[0].value+'<br>'+phno+'<br>'+emls+'</div>';
+            var item = '<div class="list"><img src="' + contacts[i].photos[0].value + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span>'+contacts[i].phoneNumbers[0].value+'<br>'+contacts[i].emails[0].value+'</div>';
             citems.push(item);
             // citems.push(JSON.stringify(contacts[i]));
         };
