--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,8 @@
             for (var j = 0; j < contacts[i].emails.length; j++) {
                 eml = contacts[i].emails[j].pref;
             };*/
-            var phno = JSON.stringify(contacts[i].phoneNumbers);
-            var emls = JSON.stringify(contacts[i].emails);
+            var phno = contacts[i].phoneNumbers;
+            var emls = contacts[i].emails;
             // var phot = JSON.stringify(contacts[i].photos);
             var item = '<div class="list"><img src="' + contacts[i].photos[0].value + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span>'+contacts[i].phoneNumbers[0].value+'<br>'+contacts[i].emails[0].value+'</div>';
             citems.push(item);
