--- a/contact.html
+++ b/contact.html
@@ -46,14 +46,14 @@
                 eml = contacts[i].emails[j].pref;
             };*/
             // var jscont = JSON.stringify(contacts[i]);
-            var phno = contacts[i].phoneNumbers;
-            var emls = contacts[i].emails;
+            /*var phno = contacts[i].phoneNumbers;
+            var emls = contacts[i].emails;*/
 
             // var phot = JSON.stringify(contacts[i].photos);
             /*var item = '<div class="list"><img src="' + contacts[i].photos[0].value + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span>'+contacts[i].phoneNumbers[0].value+'<br>'+contacts[i].emails[0].value+'</div>';*/
             // citems.push(item);
             citems.push(contacts[i].name.formatted);
-            for (var j = 0; j < phno.length; j++) {
+            for (var j = 0; j < contacts[i].phoneNumbers.length; j++) {
                 // contacts[i].phoneNumbers[j].value;
                 if (contacts[i].phoneNumbers[j].type == "mobile") {
                     citems.push(contacts[i].phoneNumbers[j].value );
