--- a/contact.html
+++ b/contact.html
@@ -54,11 +54,11 @@
             // var phot = JSON.stringify(contacts[i].photos);
             /*var item = '<div class="list"><img src="' + contacts[i].photos[0].value + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span>'+contacts[i].phoneNumbers[0].value+'<br>'+contacts[i].emails[0].value+'</div>';*/
             // citems.push(item);
-            $("#contactList").append('<div class="list">'+contacts[i].name.formatted+'</div>');
+            // $("#contactList").append('<div class="list">'+contacts[i].name.formatted+'</div>');
             for (var j = 0; j < contacts[i].phoneNumbers.length; j++) {
                 if (contacts[i].phoneNumbers[j].type == "mobile") {
                     // citems.push(contacts[i].phoneNumbers[j].value );
-                    $("#contactList").append('<div class="list">'+contacts[i].phoneNumbers[j].value+'</div>');
+                    $("#contactList").append('<div class="list"><img src="' + contacts[i].photos[i].value + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span>'+contacts[i].phoneNumbers[j].value+'</div>');
                 };
             };
             
