--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
     </div>
   </div>
 </section>
-<section class="orange-bg padding-vert-20">
+<!-- <section class="orange-bg padding-vert-20">
   <div class="container">
     <div class="grid ">
       <div class="row cells2">
         <div class="cell ">
           <div class="row cells6">
-          	<div class="cell colspan2">
+            <div class="cell colspan2">
               <div class="circle huge white-bg "><span class="icon-bubbles icon-4x v-align-middle orange-text"></span></div>
             </div>
             <div class="cell colspan4">
@@ -157,7 +157,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 <!-- <footer class="footer">
   <div class="container">
     <div class="grid">
@@ -182,15 +182,15 @@
 <script>
     $(function(){
         $("#carousel").carousel({effect:'slowdown', controls:false});
-		$('.flexslider').flexslider({
-			animation: "slide",
-			animationLoop: true,
-			itemWidth: 220,
-			itemMargin: 0,
-			minItems: 2,
-			maxItems: 4
-		  });
-    });
+    		$('.flexslider').flexslider({
+    			animation: "slide",
+    			animationLoop: true,
+    			itemWidth: 220,
+    			itemMargin: 0,
+    			minItems: 2,
+    			maxItems: 4
+    		  });
+        });
 </script>
 </body>
 </html>
