--- a/contact.html
+++ b/contact.html
@@ -48,24 +48,24 @@
                 eml = contacts[i].emails[j].pref;
             };*/
             // var jscont = JSON.stringify(contacts[i]);
-            /*var phno = contacts[i].phoneNumbers;
-            var emls = contacts[i].emails;*/
+            var phno = contacts[i].phoneNumbers;
+            var emls = contacts[i].emails;
+            var phot = contacts[i].photos;
 
             // var phot = JSON.stringify(contacts[i].photos);
-            /*var item = '<div class="list"><img src="' + contacts[i].photos[0].value + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span>'+contacts[i].phoneNumbers[0].value+'<br>'+contacts[i].emails[0].value+'</div>';*/
+            var item = '<div class="list"><img src="' + contacts[i].photos[0].value + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span>'+contacts[i].phoneNumbers[0].value+'<br>'+contacts[i].emails[0].value+'</div>';
             // citems.push(item);
             // $("#contactList").append('<div class="list">'+contacts[i].name.formatted+'</div>');
-            for (var j = 0; j < contacts[i].phoneNumbers.length; j++) {
+            /*for (var j = 0; j < contacts[i].phoneNumbers.length; j++) {
                 if (contacts[i].phoneNumbers[j].type == "mobile") {
-                    // citems.push(contacts[i].phoneNumbers[j].value );
                     $("#contactList").append('<div class="list"><img src="' + contacts[i].photos[i].value + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span>'+contacts[i].phoneNumbers[j].value+'</div>');
                 };
-            };
+            };*/
             
-            citems.push(JSON.stringify(contacts[i].phoneNumbers));
+            // citems.push(JSON.stringify(contacts[i].phoneNumbers));
         };
         // $("#loader").hide();
-        $("#contactList").append(citems.join(' -|- '));
+        $("#contactList").append(citems.join(''));
     };
 
     function onError(contactError) {
