--- a/contact.html
+++ b/contact.html
@@ -52,10 +52,9 @@
             var emls = contacts[i].emails;
             var phot = contacts[i].photos;*/
 
-            console.log(contacts[i].phoneNumbers);
 
             // var phot = JSON.stringify(contacts[i].photos);
-            var item = '<div class="list"><img src="' + contacts[i].photos + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span>'+contacts[i].phoneNumbers[0].value+'<br>'+contacts[i].emails[0].value+'</div>';
+            /*var item = '<div class="list"><img src="' + contacts[i].photos + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span>'+contacts[i].phoneNumbers[0].value+'<br>'+contacts[i].emails[0].value+'</div>';*/
             // citems.push(item);
             // $("#contactList").append('<div class="list">'+contacts[i].name.formatted+'</div>');
             /*for (var j = 0; j < contacts[i].phoneNumbers.length; j++) {
@@ -64,10 +63,10 @@
                 };
             };*/
             
-            // citems.push(JSON.stringify(contacts[i].phoneNumbers));
+            citems.push(JSON.stringify(contacts[i]));
         };
         // $("#loader").hide();
-        $("#contactList").append(citems.join(''));
+        $("#contactList").append(citems.join('=|='));
     };
 
     function onError(contactError) {
