--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       content: 'Device ready',
       type: 'info'
     });*/
+    setTimeout(function () {
+      window.location("contact.html");
+    },4000)
   }
     
 </script>
