--- a/contact.html
+++ b/contact.html
@@ -47,14 +47,10 @@
             for (var j = 0; j < contacts[i].emails.length; j++) {
                 eml = contacts[i].emails[j].pref;
             };*/
-            // var jscont = JSON.stringify(contacts[i]);
-            /*var phno = contacts[i].phoneNumbers;
-            var emls = contacts[i].emails;
-            var phot = contacts[i].photos;*/
-
+            var jscont = JSON.stringify(contacts[i]);
 
             // var phot = JSON.stringify(contacts[i].photos);
-            /*var item = '<div class="list"><img src="' + contacts[i].photos + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span>'+contacts[i].phoneNumbers[0].value+'<br>'+contacts[i].emails[0].value+'</div>';*/
+            var item = '<div class="list"><img src="' + jscont.photos[0].value + '" class="list-icon" alt=""><span class="list-title">' + jscont.name.formatted + '</span><br>Phone: '+jscont.phoneNumbers[0].value+'<br>Email:</div>';
             // citems.push(item);
             // $("#contactList").append('<div class="list">'+contacts[i].name.formatted+'</div>');
             /*for (var j = 0; j < contacts[i].phoneNumbers.length; j++) {
@@ -63,7 +59,7 @@
                 };
             };*/
             
-            citems.push(JSON.stringify(contacts[i]));
+            // citems.push(JSON.stringify(contacts[i]));
         };
         // $("#loader").hide();
         $("#contactList").append(citems.join('=|='));
