--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       type: 'info'
     });*/
     setTimeout(function () {
-      window.location("contact.html");
+      window.location.assign("contact.html");
     },4000)
   }
     
