--- a/contact.html
+++ b/contact.html
@@ -47,10 +47,10 @@
             for (var j = 0; j < contacts[i].emails.length; j++) {
                 eml = contacts[i].emails[j].pref;
             };*/
-            var jscont = JSON.stringify(contacts[i]);
 
+            var jsphone = JSON.stringify(contacts[i].phoneNumbers);
             // var phot = JSON.stringify(contacts[i].photos);
-            var item = '<div class="list"><img src="' + jscont.photos[0].value + '" class="list-icon" alt=""><span class="list-title">' + jscont.name.formatted + '</span><br>Phone: '+jscont.phoneNumbers[0].value+'<br>Email:</div>';
+            var item = '<div class="list"><img src="' + contacts[i].photos + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span><br>Phone: '+jsphone+'<br>Email:</div>';
             // citems.push(item);
             // $("#contactList").append('<div class="list">'+contacts[i].name.formatted+'</div>');
             /*for (var j = 0; j < contacts[i].phoneNumbers.length; j++) {
