--- a/contact.html
+++ b/contact.html
@@ -48,9 +48,10 @@
                 eml = contacts[i].emails[j].pref;
             };*/
 
-            // var jsphone = JSON.stringify(contacts[i].phoneNumbers);
-            // var phot = JSON.stringify(contacts[i].photos);
-            var item = '<div class="list"><img src="' + contacts[i].photos + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span><br>Phone: '+contacts[i].phoneNumbers[0].value+'<br>Email:'+contacts[i].emails[0].value+'</div>';
+            var jsphone = JSON.stringify(contacts[i].phoneNumbers);
+            var jsphot = JSON.stringify(contacts[i].photos);
+            var jsemls = JSON.stringify(contacts[i].emails);
+            var item = '<div class="list"><img src="' + contacts[i].photos + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span><br>Phone: '+jsphone+'<br>Email:'+jsemls+'</div>';
 
             citems.push(item);
             // $("#contactList").append('<div class="list">'+contacts[i].name.formatted+'</div>');
