--- a/contact.html
+++ b/contact.html
@@ -48,14 +48,21 @@
                 eml = contacts[i].emails[j].pref;
             };*/
 
-            // var item = '<div class="list"><img src="' + contacts[i].photos + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span><br>Phone: '+contacts[i].phoneNumbers[0].value+'<br>Email:'+contacts[i].emails[0].value+'</div>';
+            var phone=null;
+            var email=null;
 
-            // $("#contactList").append('<div class="list">'+contacts[i].name.formatted+'</div>');
             for (var j = 0; j < contacts[i].phoneNumbers.length; j++) {
                 if (contacts[i].phoneNumbers[j]) {
-                    $("#contactList").append('<div class="list"><img src="' + contacts[i].photos + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span>'+contacts[i].phoneNumbers[j].value+'</div>');
+                    phone = contacts[i].phoneNumbers[j].value;
                 };
             };
+            for (var j = 0; j < contacts[i].emails.length; j++) {
+                if (contacts[i].emails[j]) {
+                    email = contacts[i].emails[j].value;
+                };
+            };
+            
+            var item = '<div class="list"><img src="' + contacts[i].photos + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span><br>Phone: '+phone+'<br>Email:'+email+'</div>';
             
             citems.push(item);
             // citems.push(JSON.stringify(contacts[i]));
