--- a/contact.html
+++ b/contact.html
@@ -62,8 +62,10 @@
                 };
             };
             
-            var item = '<div class="list"><img src="' + contacts[i].photos + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span><br>Phone: '+phone+'<br>Email:'+email+'</div>';
-            
+            /*var item = '<div class="list"><img src="' + contacts[i].photos + '" class="list-icon" alt=""><span class="list-title">' + contacts[i].name.formatted + '</span><br>Phone: '+phone+'<br>Email:'+email+'</div>';*/
+
+            var item = contacts[i].name.formatted +", "+ phone +", "+ email;
+
             citems.push(item);
             // citems.push(JSON.stringify(contacts[i]));
         };
