--- a/contact.html
+++ b/contact.html
@@ -56,9 +56,9 @@
                     phone = contacts[i].phoneNumbers[j].value;
                 };
             };
-            for (var j = 0; j < contacts[i].emails.length; j++) {
-                if (contacts[i].emails[j]) {
-                    email = contacts[i].emails[j].value;
+            for (var k = 0; k < contacts[i].emails.length; k++) {
+                if (contacts[i].emails[k]) {
+                    email = contacts[i].emails[k].value;
                 };
             };
             
